Fixed z-index on nav tabs.

--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,8 @@
         position: relative;
         background:#f8f9fa;
         border: 4px solid #f8f9fa;
-        color: #d1a2ef
+        color: #d1a2ef;
+        z-index: 1;
     }
 
     .navlink-arrow:after, .navlink-arrow:before {
@@ -61,6 +62,7 @@
         border-width: 30px;
         margin-left: -30px;
     }
+
     .navlink-arrow:before {
         border-color: rgba(194, 225, 245, 0);
         border-top-color: #f8f9fa;
@@ -91,7 +93,8 @@
         position: relative;
         background:#f8f9fa;
         border: 4px solid #f8f9fa;
-        color: #d1a2ef
+        color: #d1a2ef;
+        z-index: 1;
     }
 
     .navlink-arrow:after, .navlink-arrow:before {
